<resources>
    <string name="app_name">game</string>
    <string name="title_login">Login</string>
    <string name="title_input_email">Email</string>
    <string name="title_email">Email</string>
    <string name="title_password">Password</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="title_btn_login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_register">Register</string>
    <string name="title_your_name">Your name</string>
    <string name="text_your_name">Your name</string>
    <string name="title_phone_number">Phone Number</string>
    <string name="title_address">Address</string>
    <string name="title_comfirm_password">Comfirm password</string>
    <string name="title_btn_register">Register</string>
    <string name="title_account_ku">Account KU</string>
    <string name="title_get_referral_code">Get referral code</string>
    <string name="text_you_are_logged_in_on_user">You are logged in on user %s \n Please select the items below to use</string>
    <string name="text_btn_dk_ku">dk KU</string>
    <string name="text_btn_dn_ku">DN KU</string>
    <string name="text_btn_get_support_contact_number">Get support contact number</string>
    <string name="text_btn_go_to_the_forum_zalo_number">Go to the forum zalo number</string>
    <string name="text_btn_go_to_the_shock_forum">Go to the shock forum</string>
    <string name="register_success">Register Success</string>
    <string name="register_not_success">Vui lòng không được để trống dữ liệu</string>
    <string name="connect_server_fail">Kết nối server lỗi: </string>
    <string name="title_loading">Loading</string>
    <string name="notification">Thông báo</string>
    <string name="introduce_code">Mã giới thiệu ccuar bạn là: </string>
    <string name="title_cancel">Thoát</string>
    <string name="title_ok">Đồng Ý</string>
    <string name="please_check_country_internet">Vui lòng Sử dụng nhà mạng việt Nam</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toast_twice_exit_app">Please click again to exit the app!</string>
    <string name="canot_connect_internet">Không thể kết nối internet vui lòng thử lại sau</string>
</resources>